Fixes to spacing

--- a/src/scss/Plugins/Core/outgoingLinkBacklinks.scss
+++ b/src/scss/Plugins/Core/outgoingLinkBacklinks.scss
@@ -9,15 +9,10 @@
 	padding: var(--size-4-1);
 }
 
-.backlink-pane .search-result-container,
-.outgoing-link-pane .search-result-container {
+.backlink-pane .search-result-container .search-result-container,
+.outgoing-link-pane .search-result-container .search-result-container {
 	padding: unset;
-	margin: var(--size-4-1) var(--size-4-1) var(--size-4-1) var(--size-4-3);
-}
-
-.backlink-pane .search-result-file-matches,
-.outgoing-link-pane .search-result-file-matches {
-	margin: unset;
+	margin: var(--size-4-1) var(--size-4-1) var(--size-4-2) var(--size-4-5);
 }
 
 .outgoing-link-pane .tree-item-self .tree-item-icon {
