--- a/src/scss/Plugins/Core/search.scss
+++ b/src/scss/Plugins/Core/search.scss
@@ -27,7 +27,7 @@
 }
 
 .search-result-file-matches {
-	margin: var(--size-4-1) var(--size-4-1) var(--size-4-1) var(--size-4-3);
+	margin: var(--size-4-1) var(--size-4-1) var(--size-4-2) var(--size-4-5);
 }
 
 .search-result-hover-button {
