--- a/src/scss/User Interface/Sidebar/tabHeader.scss
+++ b/src/scss/User Interface/Sidebar/tabHeader.scss
@@ -46,9 +46,8 @@
 
 .workspace-tabs .workspace-tab-header-container-inner {
 	gap: var(--size-4-1);
-	height: var(--header-height);
-	padding: var(--size-4-1);
-	margin: unset;
+	padding: unset;
+	margin: var(--size-4-1);
 }
 
 .workspace-tab-header-tab-list,
