--- a/src/scss/User Interface/workspace.scss
+++ b/src/scss/User Interface/workspace.scss
@@ -81,7 +81,7 @@ body.pt-hide-view-header div.workspace-leaf-content div.view-header {
 .workspace-split.mod-vertical.mod-root {
 	.sidebar-toggle-button {
 		width: fit-content;
-		height: 33px;
+		height: 32px;
 		padding: 2px;
 		margin: 4px;
 		border: 2px solid transparent;
